--- a/src/comp/Header/Header.css
+++ b/src/comp/Header/Header.css
@@ -5,6 +5,6 @@
 }
 .nav-link:hover {
   font-weight: 600;
-  border-bottom: 3px solid wheat;
+  border-bottom: 3px solid rgb(253, 196, 88);
   margin-bottom: -3px;
 }
