--- a/src/comp/Home/Home.css
+++ b/src/comp/Home/Home.css
@@ -1,11 +1,3 @@
-#jumbostyle {
-  background-image: url("jumbo.jpg");
-  background-position: center center;
-  background-size: cover;
-  color: floralwhite;
-  height: 75vh;
-  border-radius: 0px !important;
-}
-.number {
-  font-size: 50px;
+.HomeStyle {
+  background-color: #ececec;
 }
