--- a/src/comp/Header/Header.css
+++ b/src/comp/Header/Header.css
@@ -1,10 +1,20 @@
 .navbar-dark {
-  background-color: #343a40;
+  background-color: black;
   color: antiquewhite;
-  padding: 5px;
 }
 .nav-link:hover {
   font-weight: 600;
   border-bottom: 3px solid rgb(253, 196, 88);
   margin-bottom: -3px;
+}
+@media only screen and (max-width: 800px) {
+  .nav-link {
+    font-weight: 600;
+    text-align: center;
+  }
+  .nav-link:hover {
+    font-weight: 600;
+    border-bottom: 3px solid black;
+    margin-bottom: -3px;
+  }
 }
